Update the package description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: tsibblePlotly
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
+Title: Tools for Time Series Analysis for tsibble Objects
+Version: 0.0.9000
+Authors@R: person("Rami", "Krispin", email = "rami.krispin@gmail.com",
+  role = c("aut", "cre"))
+Maintainer: Rami Krispin <rami.krispin@gmail.com>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
