Update the package description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,22 @@ Version: 0.0.9000
 Authors@R: person("Rami", "Krispin", email = "rami.krispin@gmail.com",
   role = c("aut", "cre"))
 Maintainer: Rami Krispin <rami.krispin@gmail.com>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: Provides a set of tools for visualizing and analyzing tsibble objects
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Imports:
+  dplyr(>= 0.7.5),
+  lubridate (>= 1.6.0),
+  magrittr (>= 1.5),
+  plotly(>= 4.9.1),
+  tsibble(>= 0.8.5)
+Suggests:
+    knitr,
+    rmarkdown,
+    devtools,
+    remotes,
+    testthat
+VignetteBuilder: knitr
+URL: https://github.com/RamiKrispin/tsibblePlotly
+BugReports: https://github.com/RamiKrispin/tsibblePlotly/issues
